--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=laptopshop
+
+spring.datasource.url=jdbc:mysql://localhost:3306/laptopshop
+spring.datasource.username=root
+spring.datasource.password=minh1404
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
